# vid-rs

./: Cargo.toml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/video/: stream.rs
